--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,113 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	height: 100%;
+	width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+	height: 100%;
+	width: 100%;
+}
+
+#root {
+	height: 100%;
+	width: 100%;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "IBM Plex Mono", monospace;
+}
+
+/* ---------------------------------------------- */
+
+.App {
+	width: 100%;
+	height: 100%;
+}
+
+.main-container {
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
+
+	background-color: #dedad4;
+	z-index: 5000;
+}
+
+.text-box {
+	width: 0px;
+	height: 0px;
+
+	position: absolute;
+	top: 0px;
+	left: 0px;
+
+	z-index: 1000;
+
+	opacity: 0;
+}
+
+.message-container {
+	margin-top: 4rem;
+	font-size: xx-large;
+	text-align: center;
+	white-space: pre-line;
+
+}
+.info-container {
+	width: 100%;
+	height: fit-content;
+
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	margin-bottom: 4rem;
+}
+
+.text-display {
+	max-width: 40%;
+	margin: 1rem;
+
+	white-space: pre-line;
+}
+@media only screen and (max-width: 850px) {
+	.text-display {
+		max-width: 80%;
+	}
+}
+
+.text-display-title {
+	font-size: larger;
+	padding-bottom: .5rem;
+}
+
+.text-display-inner {
+	padding: 1rem;
+	max-width: 100%;
+	height: 100%;
+
+	width: fit-content;
+	overflow-x: scroll;
+
+	background-color: whitesmoke;
+	/* border: 1px solid black; */
+	border-radius: 1rem;
+	box-shadow: 0px 0px 4px 1px rgba(0,0,0, .3);
+
+	&::-webkit-scrollbar {
+		/* Chrome, Safari and Opera */
+		display: none;
+	}
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
 }
